--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,10 +32,9 @@
       <h1>Allen Chamber of Commerce</h1>
 
       <div id="logo">
-          
-        <picture
-          ><img src="images/allen-logo-white.webp" alt="Allen Logo"
-        />
+        <picture>
+          <img src="images/allen-logo-white.webp" alt="Allen Logo" />
+        </picture>
       </div>
 
       <div class="social-media">
@@ -89,9 +88,7 @@
           <img src="images/flag-texas.webp" alt="Texas flag" />
         </picture>
 
-        <button type="button" class="join-button">
-          <a href="join.html">Join the Allen Chamber!</a>
-        </button>
+        <a class="join-button" href="join.html">Join the Allen Chamber!</a>
       </section>
 
       <div class="event">
@@ -126,9 +123,7 @@
       <div class="spotlights"></div>
 
       <div class="join">
-        <button>
-          <a href="join.html">Join Us!</a>
-        </button>
+        <a class="join-two" href="join.html">Join Us!</a>
         <br />
         Discover how to join the Allen Chamber of Commerce and discover the
         benefits for you, and your organization!
