--- a/chamber/join.html
+++ b/chamber/join.html
@@ -7,7 +7,7 @@
     <title>Allen Chamber of Commerce</title>
     <meta
       name="description"
-      content="Page to sign up to join the Allen Chamber of Commerce."
+      content="This page is to sign up to join the Allen Chamber of Commerce"
     />
     <link rel="shortcut icon" href="../favicon.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -56,12 +56,13 @@
 
       <nav>
         <ul class="navigation">
-            <li><a class="ham" href="#">&#9776; Menu</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="discover.html">Discover</a></li>
-            <li><a href="directory.html">Directory</a></li>
-            <li><a href="join.html">Join</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <li><a class="ham" href="#">&#9776; Menu</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="discover.html">Discover</a></li>
+          <li><a href="directory.html">Directory</a></li>
+          <li><a href="join.html">Join</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
 
       <div class="today"></div>
@@ -190,8 +191,8 @@
             ><span class="price"> Free </span></label
           >
           <p class="description">
-            Have your business listed in the Allen Texas Chamber of Commerce online
-            directory.
+            Have your business listed in the Allen Texas Chamber of Commerce
+            online directory.
           </p>
           <label class="sbs"
             ><input type="radio" name="member" value="bronze" /><span
@@ -201,7 +202,10 @@
             ><span class="price"> $1,000 </span></label
           >
           <p class="description">
-            An affordable price for great business opprotunities. If you want to be a more active member in the community and be invited to participate in local events then the bronze membership might be for you. 
+            An affordable price for great business opprotunities. If you want to
+            be a more active member in the community and be invited to
+            participate in local events then the bronze membership might be for
+            you.
           </p>
           <label class="sbs"
             ><input type="radio" name="member" value="silver" /><span
@@ -212,8 +216,9 @@
           >
           <p class="description">
             See growth for your buissness by being included in our chamber
-            spotlights and directory. Stay up-to-date in the Chamber's events, receive spotlights, and be
-            included in the chamber's online directory.
+            spotlights and directory. Stay up-to-date in the Chamber's events,
+            receive spotlights, and be included in the chamber's online
+            directory.
           </p>
           <label class="sbs"
             ><input type="radio" name="member" value="gold" /><span
@@ -223,7 +228,11 @@
             ><span class="price"> $6,000 </span></label
           >
           <p class="description">
-            The gold membership gives you and your company complete access to the Greater Area Commmerse resources. Your company will be the featured business on the Greater Area Commerse homepage. Your company will recieve invitations to every exculsive and public event held by the commerse.
+            The gold membership gives you and your company complete access to
+            the Greater Area Commmerse resources. Your company will be the
+            featured business on the Greater Area Commerse homepage. Your
+            company will recieve invitations to every exculsive and public event
+            held by the commerse.
           </p>
         </fieldset>
         <label
