--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -5,10 +5,7 @@
     <meta name="author" content="Sara Matheney Tague" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Allen Chamber of Commerce</title>
-    <meta
-      name="description"
-      content="Thank you page for joining the chamber"
-    />
+    <meta name="description" content="Thank you page for joining the chamber" />
     <link rel="shortcut icon" href="../favicon.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
@@ -56,12 +53,12 @@
 
       <nav>
         <ul class="navigation">
-            <li><a class="ham" href="#">&#9776; Menu</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="discover.html">Discover</a></li>
-            <li><a href="directory.html">Directory</a></li>
-            <li><a href="join.html">Join</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <li><a class="ham" href="#">&#9776; Menu</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="discover.html">Discover</a></li>
+          <li><a href="directory.html">Directory</a></li>
+          <li><a href="join.html">Join</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
 
