--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="author" content="Sara Matheney Tague" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Allen Chamber of Commerce</title>
@@ -55,55 +55,67 @@
 
       <nav>
         <ul class="navigation">
-            <li><a class="ham" href="#">&#9776; Menu</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="discover.html">Discover</a></li>
-            <li><a href="directory.html">Directory</a></li>
-            <li><a href="join.html">Join</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <li><a class="ham" href="#">&#9776; Menu</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="discover.html">Discover</a></li>
+          <li><a href="directory.html">Directory</a></li>
+          <li><a href="join.html">Join</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
 
       <div class="today"></div>
     </header>
-    <h2 >Contact the Allen Chamber of Commerce</h2>
+    <h2>Contact the Allen Chamber of Commerce</h2>
     <main class="join-main">
-      
-      <h2 class="contactus">
-        
-      </h2>
-
+      <h2 class="contactus"></h2>
 
       <form method="get" action="thankyou-contact.html" class="contact-form">
         <fieldset>
-            <legend>Message Us!</legend>
-            <label class="top">First Name*<input type="text" name="fname" required></label>
-            <label class="top">Last Name*<input type="text" name="lname" required></label>
-            <label class="top">Email*<input type="email" name="email" placeholder="someone@gmail.com" required></label>
-            <label class="top">Phone*<input type="tel" name="phone" required></label>
-            <label class="top">Message or Question:<br><textarea rows="3" name="bus-description"></textarea></label>
+          <legend>Message Us!</legend>
+          <label class="top"
+            >First Name*<input type="text" name="fname" required
+          /></label>
+          <label class="top"
+            >Last Name*<input type="text" name="lname" required
+          /></label>
+          <label class="top"
+            >Email*<input
+              type="email"
+              name="email"
+              placeholder="someone@gmail.com"
+              required
+          /></label>
+          <label class="top"
+            >Phone*<input type="tel" name="phone" required
+          /></label>
+          <label class="top"
+            >Message or Question:<br /><textarea
+              rows="3"
+              name="bus-description"
+            ></textarea>
+          </label>
         </fieldset>
-        <input type="submit" class="submit" value="Send Message">
-    </form>
+        <input type="submit" class="submit" value="Send Message" />
+      </form>
 
-    <article class="contact-info">
-
-      <h2>Contact Information</h2>
-      <picture
-              ><img
-                class="contact-page-img"
-                src="images/contact.webp"
-                alt="contact graphic"
-            /></picture>
-      <p>Hours are Mon-Fri 8am-5pm (MST)</p>
-      <p>+(469) 2589-2693</p>
-      <p>allencommerce@gmail.com</p>
-      <p>301 Century Parkway, Allen, Texas 75013</p>
-      <a
-        href="https://www.google.com/maps/place/Allen,+TX/@33.1141831,-96.7077114,13z/data=!3m1!4b1!4m5!3m4!1s0x864c172e4d9479bd:0xcae82aa992de2cd5!8m2!3d33.1031744!4d-96.6705503"
-        ><p class="contact-map">&#128204;Map of Allen</p></a
-      >
-    </article>
-
+      <article class="contact-info">
+        <h2>Contact Information</h2>
+        <picture
+          ><img
+            class="contact-page-img"
+            src="images/contact.webp"
+            alt="contact graphic"
+        /></picture>
+        <p>Hours are Mon-Fri 8am-5pm (MST)</p>
+        <p>+(469) 2589-2693</p>
+        <p>allencommerce@gmail.com</p>
+        <p>301 Century Parkway, Allen, Texas 75013</p>
+        <a
+          href="https://www.google.com/maps/place/Allen,+TX/@33.1141831,-96.7077114,13z/data=!3m1!4b1!4m5!3m4!1s0x864c172e4d9479bd:0xcae82aa992de2cd5!8m2!3d33.1031744!4d-96.6705503"
+          ><p class="contact-map">&#128204;Map of Allen</p></a
+        >
+      </article>
     </main>
 
     <footer>
