--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,7 +7,7 @@
     <title>Allen Chamber of Commerce</title>
     <meta
       name="description"
-      content="Directory for companies that are a part of the Allen Chamber of Commerce"
+      content="This is a directory for all the companies that are a part of the Allen Chamber of Commerce"
     />
     <link rel="shortcut icon" href="../favicon.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -28,7 +28,6 @@
       Come join us for the chamber meet and greet Wednesday at 7:00 p.m.
     </div>
     <header>
-
       <h1>Allen Chamber of Commerce</h1>
 
       <div id="logo">
@@ -57,29 +56,31 @@
 
       <nav>
         <ul class="navigation">
-            <li><a class="ham" href="#">&#9776; Menu</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="discover.html">Discover</a></li>
-            <li><a href="directory.html">Directory</a></li>
-            <li><a href="join.html">Join</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <li><a class="ham" href="#">&#9776; Menu</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="discover.html">Discover</a></li>
+          <li><a href="directory.html">Directory</a></li>
+          <li><a href="join.html">Join</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
 
       <div class="today"></div>
     </header>
-         
+
     <h2>Directory</h2>
     <main class="main-direct">
       <section class="directory">
         <div class="list-view-btn">
-          <button id="list-btn"> <img src="images/list-view.png" alt="list view button" width="50"></button>
-          <button id="card-btn"> <img src="images/card-view.png" alt="list view button" width="50"></button>
+          <button id="list-btn">
+            <img src="images/list-view.png" alt="list view button" width="50" />
+          </button>
+          <button id="card-btn">
+            <img src="images/card-view.png" alt="list view button" width="50" />
+          </button>
         </div>
-        <div class="cards list-view">
-
-
-        </div>
-        </section>
+        <div class="cards list-view"></div>
+      </section>
     </main>
 
     <footer>
