--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -7,7 +7,7 @@
     <title>Allen Chamber of Commerce</title>
     <meta
       name="description"
-      content="A page to discover different sites and businesses around Allen"
+      content="A page to discover some of the different sites and businesses around Allen Texas"
     />
     <link rel="shortcut icon" href="../favicon.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
