--- a/chamber/thankyou-contact.html
+++ b/chamber/thankyou-contact.html
@@ -7,7 +7,7 @@
     <title>Allen Chamber of Commerce</title>
     <meta
       name="description"
-      content="Home page for the Allen Texas Chamber of Commerce Site"
+      content="This page apearse once a message is sent to the Chamber"
     />
     <link rel="shortcut icon" href="../favicon.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -69,16 +69,16 @@
       <div class="today"></div>
     </header>
     <main class="thank-contact-main">
-        <article class="thank">
-            <picture
-              ><img
-                class="contact-img"
-                src="images/contact.webp"
-                alt="contact graphic"
-            /></picture>
-            <h2>Thank you for contacting the Allen Chamber of Commerce!</h2>
-            <p>We will get back to you soon!</p>
-          </article>
+      <article class="thank">
+        <picture
+          ><img
+            class="contact-img"
+            src="images/contact.webp"
+            alt="contact graphic"
+        /></picture>
+        <h2>Thank you for contacting the Allen Chamber of Commerce!</h2>
+        <p>We will get back to you soon!</p>
+      </article>
     </main>
 
     <footer>
