--- a/temple-inn-and-suite/index.html
+++ b/temple-inn-and-suite/index.html
@@ -7,9 +7,9 @@
     <title>Dallas Temple Inn & Suites</title>
     <meta
       name="description"
-      content="Home page for the Dallas Temple Inn & Suites"
+      content="Home page that shows spotlights and other details about the Dallas Temple Inn & Suites"
     />
-    <link rel="shortcut icon" href="../favicon.ico" />
+    <link rel="shortcut icon" href="../favicon-temple.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
@@ -20,6 +20,9 @@
   </head>
   <body>
     <header>
+      <picture>
+        <img src="images/temple-logo.png" alt="Dallas Temple Inn logo" class="header-logo" />
+      </picture>
       <h1>Dallas Temple Inn & Suites</h1>
 
       <nav>
@@ -42,7 +45,7 @@
       <div class="footer-seperation">
         <section>
           <picture>
-            <img src="#" alt="Dallas Temple Inn logo" class="footer-logo" />
+            <img src="images/temple-logo.png" alt="Dallas Temple Inn logo" class="footer-logo" />
           </picture>
           <p>Dallas Temple Inn & Suites</p>
           <p>+(972) 991-1273</p>
@@ -56,11 +59,7 @@
           >
         </div>
       </div>
-      <hr />
       &copy; <span id="year">year</span> | Sara M. Tague | Texas
-      <div id="logo">
-        <picture><img src="#" alt="Dallas Temple Inn Logo" /></picture>
-      </div>
 
       <div class="social-media">
         <a href="https://www.facebook.com/ChurchofJesusChrist/"
