--- a/temple-inn-and-suite/reservation.html
+++ b/temple-inn-and-suite/reservation.html
@@ -7,9 +7,9 @@
     <title>Dallas Temple Inn & Suites</title>
     <meta
       name="description"
-      content="Page to help patrons make a reservation to stay at the Inn and attend the Temple"
+      content="This is where patrons can make a reservation to stay at the Inn and attend the Temple"
     />
-    <link rel="shortcut icon" href="../favicon.ico" />
+    <link rel="shortcut icon" href="../favicon-temple.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
