--- a/temple-inn-and-suite/services.html
+++ b/temple-inn-and-suite/services.html
@@ -7,7 +7,7 @@
     <title>Dallas Temple Inn & Suites</title>
     <meta
       name="description"
-      content="A page that lists and explains the services offered by the Inn during a visit"
+      content="An explain of the services offered by the Inn during a visit"
     />
     <link rel="shortcut icon" href="../favicon.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
