--- a/temple-inn-and-suite/temple.html
+++ b/temple-inn-and-suite/temple.html
@@ -7,7 +7,7 @@
     <title>Dallas Temple Inn & Suites</title>
     <meta
       name="description"
-      content="A list of several Temples and facts/information about them"
+      content="A list of several Temples that include facts and information about them"
     />
     <link rel="shortcut icon" href="../favicon.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
