--- a/temple-inn-and-suite/services.html
+++ b/temple-inn-and-suite/services.html
@@ -9,7 +9,7 @@
       name="description"
       content="An explain of the services offered by the Inn during a visit"
     />
-    <link rel="shortcut icon" href="../favicon.ico" />
+    <link rel="shortcut icon" href="../favicon-temple.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
