--- a/temple-inn-and-suite/temple.html
+++ b/temple-inn-and-suite/temple.html
@@ -9,7 +9,7 @@
       name="description"
       content="A list of several Temples that include facts and information about them"
     />
-    <link rel="shortcut icon" href="../favicon.ico" />
+    <link rel="shortcut icon" href="../favicon-temple.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
