--- a/temple-inn-and-suite/reservation.html
+++ b/temple-inn-and-suite/reservation.html
@@ -21,14 +21,14 @@
   <body>
     <header>
       <h1>Dallas Temple Inn & Suites</h1>
-
+     
       <nav>
         <ul class="navigation">
-          <li><a class="ham" href="#">&#9776; Menu</a></li>
+          <li><a class="ham" href="#">&#9776; Menu</a>
           <li><a href="index.html">Home</a></li>
-          <li><a href="reservation.html">Discover</a></li>
-          <li><a href="services.html">Directory</a></li>
-          <li><a href="temple.html">Join</a></li>
+          <li><a href="reservation.html"><strong>Reservation</strong></a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="temple.html">Temples</a></li>
         </ul>
       </nav>
 
@@ -36,6 +36,7 @@
     </header>
     <main class="reservation-main">
       <h2>Make a Reservation</h2>
+      <p>6363 Willow Ln, Dallas, TX 75230</p>
     </main>
 
     <footer>
