--- a/temple-inn-and-suite/services.html
+++ b/temple-inn-and-suite/services.html
@@ -24,11 +24,11 @@
 
       <nav>
         <ul class="navigation">
-          <li><a class="ham" href="#">&#9776; Menu</a></li>
+          <li><a class="ham" href="#">&#9776; Menu</a>
           <li><a href="index.html">Home</a></li>
-          <li><a href="reservation.html">Discover</a></li>
-          <li><a href="services.html">Directory</a></li>
-          <li><a href="temple.html">Join</a></li>
+          <li><a href="reservation.html">Reservation</a></li>
+          <li><a href="services.html"><strong>Services</strong></a></li>
+          <li><a href="temple.html">Temples</a></li>
         </ul>
       </nav>
 
