--- a/temple-inn-and-suite/index.html
+++ b/temple-inn-and-suite/index.html
@@ -15,44 +15,98 @@
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/large.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
     <script src="js/script.js" defer></script>
     <script src="js/dates.js" defer></script>
+    <script src="js/weather.js" defer></script>
+    <script src="js/spotlights.js" defer></script>
   </head>
   <body>
     <header>
       <picture>
-        <img src="images/temple-logo.png" alt="Dallas Temple Inn logo" class="header-logo" />
+        <img
+          src="images/temple-logo-black.png"
+          alt="Dallas Temple Inn logo"
+          class="header-logo"
+        />
       </picture>
       <h1>Dallas Temple Inn & Suites</h1>
 
       <nav>
         <ul class="navigation">
           <li><a class="ham" href="#">&#9776; Menu</a></li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="reservation.html">Discover</a></li>
-          <li><a href="services.html">Directory</a></li>
-          <li><a href="temple.html">Join</a></li>
+          <li>
+            <a href="index.html"><strong>Home</strong></a>
+          </li>
+          <li><a href="reservation.html">Reservation</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="temple.html">Temples</a></li>
         </ul>
       </nav>
 
-      <div class="today"></div>
+      
     </header>
     <main class="home-main">
       <h2>Dallas Temple Inn & Suites</h2>
+
+      <article class="callToAction">
+        <h2>Welcom to Allen Texas!</h2>
+
+        <picture>
+          <source
+            media="(min-width: 1300px)"
+            srcset="images/bluebonnets.webp"
+          />
+          <source
+            media="(min-width: 32.5em)"
+            srcset="images/flag-texas-medium.webp"
+          />
+          <source
+            media="(max-width: 599px)"
+            srcset="images/flag-texas-medium.webp"
+          />
+          <img src="images/flag-texas.webp" alt="Texas flag" />
+        </picture>
+
+        <a class="reservation-button" href="reservation.html"
+          >Make a reservation</a
+        >
+      </article>
+
+      <article class="service-one">service</article>
+
+      <article class="service-two">service</article>
+
+      <article class="weather">
+        <h2>Current Weather</h2>
+        <img src="" alt="" id="weathericon" />
+        <h3><span id="current-temp"></span> &#176;F</h3>
+        <h4><span id="desc"></span></h4>
+        <hr />
+        <p>Wind Speed: <span id="speed"></span> mph</p>
+        <p>Wind Chill: <span id="windchill"></span></p>
+      </article>
+
+      <div class="spotlights"></div>
     </main>
 
     <footer>
       <div class="footer-seperation">
         <section>
           <picture>
-            <img src="images/temple-logo.png" alt="Dallas Temple Inn logo" class="footer-logo" />
+            <img
+              src="images/temple-logo.png"
+              alt="Dallas Temple Inn logo"
+              class="footer-logo"
+            />
           </picture>
-          <p>Dallas Temple Inn & Suites</p>
           <p>+(972) 991-1273</p>
         </section>
         <div class="contact">
           <p>dallastemple@lds.net</p>
-          <p>6363 Willow Ln, Dallas, TX 75230</p>
           <a
             href="https://www.bing.com/maps?q=dallas+texas+temple&cvid=1cb8584415734dfeb6a4beb9f1433755&aqs=edge.0.0j69i57j0l7.5243j0j1&pglt=513&FORM=ANNAB1&PC=DCTS"
             ><p class="map">&#128204;Inn & Suite Location</p></a
@@ -60,18 +114,24 @@
         </div>
       </div>
       &copy; <span id="year">year</span> | Sara M. Tague | Texas
-
+      <p id="lastmod"></p>
       <div class="social-media">
         <a href="https://www.facebook.com/ChurchofJesusChrist/"
-          ><picture><img class="icons" src="#" alt="Facebook Logo" /></picture
+          ><picture
+            ><img
+              class="icons"
+              src="images/facebook-icon.png"
+              alt="Facebook Logo" /></picture
         ></a>
-
         <a href="https://www.instagram.com/churchofjesuschrist/"
-          ><picture><img class="icons" src="#" alt="Instagram logo" /></picture
+          ><picture
+            ><img
+              class="icons"
+              src="images/instagram-icon.png"
+              alt="Instagram logo" /></picture
         ></a>
       </div>
-
-      <p id="lastmod"></p>
+      <div class="today"></div>
     </footer>
   </body>
 </html>
