--- a/temple-inn-and-suite/reception.html
+++ b/temple-inn-and-suite/reception.html
@@ -7,7 +7,7 @@
     <title>Dallas Temple Inn & Suites</title>
     <meta
       name="description"
-      content="A list of several Temples that include facts and information about them"
+      content="An explain of the services offered by the Inn during a visit"
     />
     <link rel="shortcut icon" href="../favicon-temple.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -17,8 +17,6 @@
 
     <script src="js/script.js" defer></script>
     <script src="js/dates.js" defer></script>
-    <script src="js/temples.js" defer></script>
-    <script src="js/like.js" defer></script>
   </head>
   <body>
     <header>
@@ -33,37 +31,20 @@
 
       <nav>
         <ul class="navigation">
-          <li><a class="ham" href="#">&#9776; Menu</a>
+          <li><a class="ham" href="#">&#9776; Menu</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="reservation.html">Reservation</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="temple.html"><strong>Temples</strong></a></li>
+          <li>
+            <a href="services.html">Services</a>
+          </li>
+          <li><a href="temple.html">Temples</a></li>
         </ul>
       </nav>
-
-
     </header>
-    <main class="temple-main">
-      <h2>Temple Details</h2>
+    <main class="services-main">
+      <h2>Specialized Services</h2>
 
-      <section class="temples">
-        <div class="cards card-view"></div>
-        <button class="btn btn-like">
-          <span class="btn-icon btn--icon-default">
-              <span class="fa fa-heart"></span>
-          </span>
-          <span class="btn-icon btn--icon-liked">
-              <span class="fa fa-heart"></span>
-          </span>
-          <span class="btn-content  btn-content--liked">
-              Liked
-          </span>
-          <span class="btn-content btn-content--default">
-              Like
-          </span>
-      </button>
-      </section>
-
+      
     </main>
 
     <footer>
@@ -98,12 +79,12 @@
                   alt="Instagram logo" /></picture
             ></a>
             <a href="https://twitter.com/ldschurch"
-            ><picture
-              ><img
-                class="icons"
-                src="images/twitter-icon.png"
-                alt="Twitter logo" /></picture
-          ></a>
+              ><picture
+                ><img
+                  class="icons"
+                  src="images/twitter-icon.png"
+                  alt="Twitter logo" /></picture
+            ></a>
           </div>
           <p>+(972) 991-1273</p>
           <p>dallastemple@lds.net</p>
