--- a/temple-inn-and-suite/services.html
+++ b/temple-inn-and-suite/services.html
@@ -20,59 +20,193 @@
   </head>
   <body>
     <header>
+      <picture>
+        <img
+          src="images/temple-logo-black.png"
+          alt="Dallas Temple Inn logo"
+          class="header-logo"
+        />
+      </picture>
       <h1>Dallas Temple Inn & Suites</h1>
 
       <nav>
         <ul class="navigation">
-          <li><a class="ham" href="#">&#9776; Menu</a>
+          <li><a class="ham" href="#">&#9776; Menu</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="reservation.html">Reservation</a></li>
-          <li><a href="services.html"><strong>Services</strong></a></li>
+          <li>
+            <a href="services.html"><strong>Services</strong></a>
+          </li>
           <li><a href="temple.html">Temples</a></li>
         </ul>
       </nav>
-
-      <div class="today"></div>
     </header>
     <main class="services-main">
-      <h2>Available Services</h2>
+      <h2>Specialized Services</h2>
+
+      <article>
+      <div class="sub pages">
+        <div class="reception">
+          <a href="reception.html"
+          >Recemtion Info</a>
+        </div>
+        <div class="missionary">
+          <a href="missionary.html"
+          >Missionary Info</a>
+        </div>
+        </div>
+      </article>
+
+      <article>
+        <picture>
+          <img
+            class="service-image"
+            src="#"
+            alt="Service offered at the temple"
+          />
+        </picture>
+        <p>
+          Free access to changing rooms and bathroom facilities for temple
+          patrons who have traveled far and need to change to and from church
+          clothes
+        </p>
+      </article>
+
+      <article>
+        <picture>
+          <img
+            class="service-image"
+            src="#"
+            alt="Service offered at the temple"
+          />
+        </picture>
+        <p>
+          A playroom and low-cost, short-term babysitting services for the children of patrons
+        </p>
+      </article>
+
+      <article>
+        <picture>
+          <img
+            class="service-image"
+            src="#"
+            alt="Service offered at the temple"
+          />
+        </picture>
+        <p>
+          Long-term stay accommodations in kitchenette suites for full-time temple missionaries
+        </p>
+      </article>
+
+      <article>
+        <picture>
+          <img
+            class="service-image"
+            src="#"
+            alt="Service offered at the temple"
+          />
+        </picture>
+        <p>
+          Temple history themed reception and sitting area
+        </p>
+      </article>
+
+      <article>
+        <picture>
+          <img
+            class="service-image"
+            src="#"
+            alt="Service offered at the temple"
+          />
+        </picture>
+        <p>
+          A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving
+        </p>
+      </article>
+
+      <article>
+        <picture>
+          <img
+            class="service-image"
+            src="#"
+            alt="Service offered at the temple"
+          />
+        </picture>
+        <p>
+A family search center that supports family search and ordinance work
+        </p>
+      </article>
+
+      <h2>Free Amenities</h2>
+
+      <article>
+        <picture>
+          <img
+            class="service-image"
+            src="#"
+            alt="Service offered at the temple"
+          />
+        </picture>
+        <p>
+          Breakfast 
+          Exercise/workout room
+          Indoor pool
+          WiFi high-speed internet access and smart TVs
+          Parking
+          Temple shuttle
+          Family history consultation and family ordinance card service
+        </p>
+      </article>
     </main>
 
     <footer>
       <div class="footer-seperation">
         <section>
           <picture>
-            <img src="#" alt="Dallas Temple Inn logo" class="footer-logo" />
+            <img
+              src="images/temple-logo.png"
+              alt="Dallas Temple Inn logo"
+              class="footer-logo"
+            />
           </picture>
-          <p>Dallas Temple Inn & Suites</p>
-          <p>+(972) 991-1273</p>
-        </section>
-        <div class="contact">
-          <p>dallastemple@lds.net</p>
-          <p>6363 Willow Ln, Dallas, TX 75230</p>
           <a
             href="https://www.bing.com/maps?q=dallas+texas+temple&cvid=1cb8584415734dfeb6a4beb9f1433755&aqs=edge.0.0j69i57j0l7.5243j0j1&pglt=513&FORM=ANNAB1&PC=DCTS"
             ><p class="map">&#128204;Inn & Suite Location</p></a
           >
+        </section>
+        <div class="contact">
+          <div class="social-media">
+            <a href="https://www.facebook.com/ChurchofJesusChrist/"
+              ><picture
+                ><img
+                  class="icons"
+                  src="images/facebook-icon.png"
+                  alt="Facebook Logo" /></picture
+            ></a>
+            <a href="https://www.instagram.com/churchofjesuschrist/"
+              ><picture
+                ><img
+                  class="icons"
+                  src="images/instagram-icon.png"
+                  alt="Instagram logo" /></picture
+            ></a>
+            <a href="https://twitter.com/ldschurch"
+              ><picture
+                ><img
+                  class="icons"
+                  src="images/twitter-icon.png"
+                  alt="Twitter logo" /></picture
+            ></a>
+          </div>
+          <p>+(972) 991-1273</p>
+          <p>dallastemple@lds.net</p>
+          <div class="today"></div>
         </div>
       </div>
-      <hr />
-      &copy; <span id="year">year</span> | Sara M. Tague | Texas
-      <div id="logo">
-        <picture><img src="#" alt="Dallas Temple Inn Logo" /></picture>
-      </div>
-
-      <div class="social-media">
-        <a href="https://www.facebook.com/ChurchofJesusChrist/"
-          ><picture><img class="icons" src="#" alt="Facebook Logo" /></picture
-        ></a>
-
-        <a href="https://www.instagram.com/churchofjesuschrist/"
-          ><picture><img class="icons" src="#" alt="Instagram logo" /></picture
-        ></a>
-      </div>
-
-      <p id="lastmod"></p>
+      <p class="footer-info">
+        &copy; <span id="year">year</span> | Sara M. Tague | Texas |
+      </p>
+      <p class="footer-info-two" id="lastmod"></p>
     </footer>
   </body>
 </html>
