--- a/temple-inn-and-suite/missionary.html
+++ b/temple-inn-and-suite/missionary.html
@@ -7,7 +7,7 @@
     <title>Dallas Temple Inn & Suites</title>
     <meta
       name="description"
-      content="An explain of the services offered by the Inn during a visit"
+      content="An explain of the services offered for the full time missionaries staying at the inn"
     />
     <link rel="shortcut icon" href="../favicon-temple.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -41,10 +41,38 @@
         </ul>
       </nav>
     </header>
-    <main class="services-main">
-      <h2>Specialized Services</h2>
+    <main class="sub-main">
+      <div class="back">
+        <a href="services.html">BACK</a>
+      </div>
 
-      
+      <article class="missionary-image">
+        <picture>
+          <img
+            class="service-image"
+            src="images/missionary.webp"
+            alt="Service offered at the temple"
+          />
+        </picture>
+        <p>The apartments are avalible to long term missionarys</p>
+      </article>
+
+      <article class="services-article">
+        <h2 class="sub-title">Missionary Services</h2>
+        <p>
+          Senior service missionaries may now be assigned to serve in temples in
+          the United States and Canada when temples move to phase 4 operations.
+          They may serve in the administrative office, youth center, cafeteria,
+          clothing, laundry, custodial, facilities maintenance, grounds, and in
+          security.
+        </br>
+      </br>
+          Volunteers serving in temple baptistries and ordinance-support areas (such as the recommend desk and sealing office) will continue to be called by the temple president through the standard recommendation process. All other long-term volunteer positions will become service missionary assignments.
+        </br>
+      </br>
+          If you are interested in learning more please contact the in at: dallastempleinn@lds.org
+        </p>
+      </article>
     </main>
 
     <footer>
