--- a/temple-inn-and-suite/reception.html
+++ b/temple-inn-and-suite/reception.html
@@ -7,7 +7,7 @@
     <title>Dallas Temple Inn & Suites</title>
     <meta
       name="description"
-      content="An explain of the services offered by the Inn during a visit"
+      content="An explain of the services offered for for receptions"
     />
     <link rel="shortcut icon" href="../favicon-temple.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -41,10 +41,37 @@
         </ul>
       </nav>
     </header>
-    <main class="services-main">
-      <h2>Specialized Services</h2>
+    <main class="sub-main">
 
-      
+        <div class="back">
+          <a href="services.html">BACK</a>
+        </div>
+
+      <article class="reception-image">
+        <picture>
+          <img
+            class="service-image"
+            src="images/reception2.webp"
+            alt="A reception"
+          />
+        </picture>
+        <p>
+          The Dallas Inn and Suiets is a great and convinient option for a wedding reception!
+        </p>
+      </article>
+
+      <article class="services-article">
+        <h2 class="sub-title">Reception Services</h2>
+        <p>The wedding reception accommodations including options for food service and setup.<br/>
+        To contact the reception services please call or email us at: </br>
+        <ul class="amenities-list">
+          <li>dallastemplereservation@lds.org</li>
+          <li>+1 801-240-3801</li>
+        </ul>
+        We are avalible Tue-Sat 8am-9pm
+        </p>
+      </article>
+
     </main>
 
     <footer>
