--- a/temple-inn-and-suite/services.html
+++ b/temple-inn-and-suite/services.html
@@ -42,120 +42,112 @@
       </nav>
     </header>
     <main class="services-main">
-      <h2>Specialized Services</h2>
+      <h2 class="services-header">Specialized Services</h2>
 
-      <article>
-      <div class="sub pages">
+      <article class="services-article sub-pages">
+        <p>For wedding reception information</p>
         <div class="reception">
-          <a href="reception.html"
-          >Recemtion Info</a>
+          <a href="reception.html">CLICK HERE</a>
         </div>
+        <p>For missionary service housing information</p>
         <div class="missionary">
-          <a href="missionary.html"
-          >Missionary Info</a>
+          <a href="missionary.html">CLICK HERE</a>
         </div>
-        </div>
+
       </article>
 
-      <article>
+      <article class="services-article">
         <picture>
           <img
             class="service-image"
-            src="#"
+            src="images/changeing-room.webp"
             alt="Service offered at the temple"
           />
         </picture>
         <p>
           Free access to changing rooms and bathroom facilities for temple
           patrons who have traveled far and need to change to and from church
-          clothes
+          clothes.
         </p>
       </article>
 
-      <article>
+      <article class="services-article">
         <picture>
           <img
             class="service-image"
-            src="#"
+            src="images/daycare.webp"
             alt="Service offered at the temple"
           />
         </picture>
         <p>
-          A playroom and low-cost, short-term babysitting services for the children of patrons
+          A playroom and low-cost, short-term babysitting services for the
+          children of patrons.
         </p>
       </article>
 
-      <article>
+      <article class="services-article">
         <picture>
           <img
             class="service-image"
-            src="#"
+            src="images/appartment.webp"
             alt="Service offered at the temple"
           />
         </picture>
         <p>
-          Long-term stay accommodations in kitchenette suites for full-time temple missionaries
+          Long-term stay accommodations in kitchenette suites for full-time
+          temple missionaries.
         </p>
       </article>
 
-      <article>
+      <article class="services-article">
         <picture>
           <img
             class="service-image"
-            src="#"
+            src="images/sitting.webp"
+            alt="Service offered at the temple"
+          />
+        </picture>
+        <p>Temple history themed reception and sitting area.</p>
+      </article>
+
+      <article class="services-article">
+        <picture>
+          <img
+            class="service-image"
+            src="images/reception.webp"
             alt="Service offered at the temple"
           />
         </picture>
         <p>
-          Temple history themed reception and sitting area
+          A wedding reception hall that can be easily customized with a simple
+          catering menu and kitchen access for food preparation and serving.
         </p>
       </article>
 
-      <article>
+      <article class="services-article">
         <picture>
           <img
             class="service-image"
-            src="#"
+            src="images/family-serch.webp"
             alt="Service offered at the temple"
           />
         </picture>
         <p>
-          A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving
+          A family search center that supports family search and ordinance work.
         </p>
       </article>
 
-      <article>
-        <picture>
-          <img
-            class="service-image"
-            src="#"
-            alt="Service offered at the temple"
-          />
-        </picture>
-        <p>
-A family search center that supports family search and ordinance work
-        </p>
-      </article>
-
-      <h2>Free Amenities</h2>
-
-      <article>
-        <picture>
-          <img
-            class="service-image"
-            src="#"
-            alt="Service offered at the temple"
-          />
-        </picture>
-        <p>
-          Breakfast 
-          Exercise/workout room
-          Indoor pool
-          WiFi high-speed internet access and smart TVs
-          Parking
-          Temple shuttle
-          Family history consultation and family ordinance card service
-        </p>
+      <article class="resourse-list services-article">
+        <h3>Free Amenities</h3>
+        <ul class="amenities-list">
+          <li>Breakfast</li>
+          <li>Exercise/workout room</li>
+          <li>Indoor pool</li>
+          <li>WiFi high-speed internet access and smart TVs</li>
+          <li>Parking</li>
+          <li>Temple shuttle</li>
+          <li>Family history consultation and family ordinance card service</li>
+        </ul>
       </article>
     </main>
 
