--- a/temple-inn-and-suite/temple.html
+++ b/temple-inn-and-suite/temple.html
@@ -33,37 +33,24 @@
 
       <nav>
         <ul class="navigation">
-          <li><a class="ham" href="#">&#9776; Menu</a>
+          <li><a class="ham" href="#">&#9776; Menu</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="reservation.html">Reservation</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="temple.html"><strong>Temples</strong></a></li>
+          <li>
+            <a href="temple.html"><strong>Temples</strong></a>
+          </li>
         </ul>
       </nav>
-
-
     </header>
     <main class="temple-main">
       <h2>Temple Details</h2>
 
       <section class="temples">
         <div class="cards card-view"></div>
-        <button class="btn btn-like">
-          <span class="btn-icon btn--icon-default">
-              <span class="fa fa-heart"></span>
-          </span>
-          <span class="btn-icon btn--icon-liked">
-              <span class="fa fa-heart"></span>
-          </span>
-          <span class="btn-content  btn-content--liked">
-              Liked
-          </span>
-          <span class="btn-content btn-content--default">
-              Like
-          </span>
-      </button>
       </section>
 
+      <button id="like"><span>LIKE</span></button>
     </main>
 
     <footer>
@@ -98,12 +85,12 @@
                   alt="Instagram logo" /></picture
             ></a>
             <a href="https://twitter.com/ldschurch"
-            ><picture
-              ><img
-                class="icons"
-                src="images/twitter-icon.png"
-                alt="Twitter logo" /></picture
-          ></a>
+              ><picture
+                ><img
+                  class="icons"
+                  src="images/twitter-icon.png"
+                  alt="Twitter logo" /></picture
+            ></a>
           </div>
           <p>+(972) 991-1273</p>
           <p>dallastemple@lds.net</p>
