--- a/temple-inn-and-suite/index.html
+++ b/temple-inn-and-suite/index.html
@@ -25,7 +25,7 @@
     <script src="js/script.js" defer></script>
     <script src="js/dates.js" defer></script>
     <script src="js/weather.js" defer></script>
-    <!--<script src="js/spotlights.js" defer></script>-->
+    <script src="js/spotlights.js" defer></script>
   </head>
   <body>
     <header>
@@ -122,7 +122,7 @@
         </p>
       </article>
 
-      <!--<div class="weather-one">
+<div class="weather-one">
         <h2>Weather</h2>
 
         <h3 class="cityName"></h3>
@@ -138,19 +138,15 @@
           <p class="wind-speed"></p>
           <p class="wind-chill"></p>
         </section>
-      </div> -->
+      </div> 
 
-
-      <section class=”weather”>
-        <div class=”container”>
-          
-          <div class=”forecast”>
-            // here we populate the 7 days forecast
-          </div>
+      <section class="”weather”">
+        <div class="”container”">
+          <div class="”forecast”">// here we populate the 7 days forecast</div>
         </div>
       </section>
 
-     <div class="spotlights"></div>
+      <div class="spotlights"></div>
     </main>
 
     <footer>
@@ -200,9 +196,14 @@
       <p class="footer-info">
         &copy; <span id="year">year</span> | Sara M. Tague | Texas |
       </p>
-      <p class="footer-info-two" id="lastmod"></p>
-      <a class="openweather" href="https://openweathermap.org/api">Weather provided by OpenWeatherMap</a>
-      
+      <p class="footer-info-two" id="lastmod"></p> </br>
+      <a class="openweather" href="https://openweathermap.org/api"
+        >Weather provided by OpenWeatherMap</a
+      >
+</br>
+      <a class="openweather" href="https://www.churchofjesuschrist.org/temples/list?lang=eng"
+        >Temple information provided by The Church of Jesus Christ of Latterday Saints</a
+      >
     </footer>
   </body>
 </html>
