--- a/temple-inn-and-suite/thankyou.html
+++ b/temple-inn-and-suite/thankyou.html
@@ -7,7 +7,7 @@
     <title>Dallas Temple Inn & Suites</title>
     <meta
       name="description"
-      content="A list of several Temples that include facts and information about them"
+      content="Thank you for making a reservation at the Dallas Inn & Suiets!"
     />
     <link rel="shortcut icon" href="../favicon-temple.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -17,8 +17,6 @@
 
     <script src="js/script.js" defer></script>
     <script src="js/dates.js" defer></script>
-    <script src="js/temples.js" defer></script>
-    <script src="js/like.js" defer></script>
   </head>
   <body>
     <header>
@@ -35,22 +33,22 @@
         <ul class="navigation">
           <li><a class="ham" href="#">&#9776; Menu</a></li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="reservation.html">Reservation</a></li>
-          <li><a href="services.html">Services</a></li>
           <li>
-            <a href="temple.html"><strong>Temples</strong></a>
+            <a href="reservation.html">Reservation</a>
           </li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="temple.html">Temples</a></li>
         </ul>
       </nav>
     </header>
-    <main class="temple-main">
-      <h2 class="temple-heading">Temple Details</h2>
+    <main class="thankyou-main">
 
-      <section class="temples">
-        <div class="cards card-view"></div>
-      </section>
+      <article class="thankyou">
+        <h2>Thank you! <br><br>Your reservation has been recived.</h2>
+        <p>You will receive a confirmation email shortly.
+        </p>
+      </article>
 
-      <button id="like"><span>LIKE</span></button>
     </main>
 
     <footer>
@@ -101,10 +99,6 @@
         &copy; <span id="year">year</span> | Sara M. Tague | Texas |
       </p>
       <p class="footer-info-two" id="lastmod"></p>
-    </br>
-    <a class="openweather" href="https://www.churchofjesuschrist.org/temples/list?lang=eng"
-      >Temple information provided by The Church of Jesus Christ of Latterday Saints</a
-    >
     </footer>
   </body>
 </html>
