--- a/temple-inn-and-suite/index.html
+++ b/temple-inn-and-suite/index.html
@@ -67,7 +67,7 @@
         <h3 class="visittoday">Vistit the Dallas Temple today!</h3>
       </article>
 
-      <article class="services-article">
+      <article class="family services-article">
         <picture>
           <img
             class="service-image"
@@ -108,7 +108,7 @@
         </p>
       </article>
 
-      <article class="services-article">
+      <article class="wedding services-article">
         <picture>
           <img
             class="service-image"
@@ -137,14 +137,13 @@
           <p class="temp"></p>
           <p class="wind-speed"></p>
           <p class="wind-chill"></p>
+          
+          
         </section>
       </div> 
 
-      <section class="”weather”">
-        <div class="”container”">
-          <div class="”forecast”">// here we populate the 7 days forecast</div>
-        </div>
-      </section>
+      <!--<div class="weatherWidget" ></div>-->
+
 
       <div class="spotlights"></div>
     </main>
