--- a/temple-inn-and-suite/temple.html
+++ b/temple-inn-and-suite/temple.html
@@ -50,7 +50,9 @@
         <div class="cards card-view"></div>
       </section>
 
-      <button id="like"><span>LIKE</span></button>
+      
+
+      <button id="start"><span>LIKE</span></button>
     </main>
 
     <footer>
