--- a/temple-inn-and-suite/reservation.html
+++ b/temple-inn-and-suite/reservation.html
@@ -46,7 +46,7 @@
       <h2 class="reservation-heading">Make a Reservation</h2>
 
       <article class="contact-info">
-        <p><strong>Information</strong></p>
+        <p class="contact-heading">Information</p>
         <p>Address: 6363 Willow Ln, Dallas, TX 75230</p>
         <p>Number: (1) 972-991-1273</p>
         <p>Email: dallastemple@ldstemples.org</p>
@@ -110,6 +110,19 @@
         /></label>
         <input type="submit" class="submit" value="Join the Chamber" />
       </form>
+
+      <article class="sunset">
+        <picture>
+          <img
+            class="service-image"
+            src="images/temple-sunset.webp"
+            alt="Temple at sunset"
+          />
+        </picture>
+        <p>
+        Visit the Dallas Temple!
+        </p>
+      </article>
     </main>
 
     <footer>
