--- a/temple-inn-and-suite/services.html
+++ b/temple-inn-and-suite/services.html
@@ -138,7 +138,7 @@
       </article>
 
       <article class="resourse-list services-article">
-        <h3>Free Amenities</h3>
+        <h3 class="amenities">Free Amenities</h3>
         <ul class="amenities-list">
           <li>Breakfast</li>
           <li>Exercise/workout room</li>
