--- a/temple-inn-and-suite/index.html
+++ b/temple-inn-and-suite/index.html
@@ -57,7 +57,7 @@
         <picture>
           <img
             class="calltoactionimage"
-            src="images/temple7.jpg"
+            src="images/temple7.webp"
             alt="Temple Spire"
           />
         </picture>
