--- a/temple-inn-and-suite/index.html
+++ b/temple-inn-and-suite/index.html
@@ -108,21 +108,7 @@
         </p>
       </article>
 
-      <article class="wedding services-article">
-        <picture>
-          <img
-            class="service-image"
-            src="images/reception.webp"
-            alt="Service offered at the temple"
-          />
-        </picture>
-        <p>
-          A wedding reception hall that can be easily customized with a simple
-          catering menu and kitchen access for food preparation and serving.
-        </p>
-      </article>
-
-<div class="weather-one">
+      <div class="weather-one">
         <h2>Weather</h2>
 
         <h3 class="cityName"></h3>
@@ -137,13 +123,8 @@
           <p class="temp"></p>
           <p class="wind-speed"></p>
           <p class="wind-chill"></p>
-          
-          
         </section>
-      </div> 
-
-      <!--<div class="weatherWidget" ></div>-->
-
+      </div>
 
       <div class="spotlights"></div>
     </main>
@@ -195,13 +176,17 @@
       <p class="footer-info">
         &copy; <span id="year">year</span> | Sara M. Tague | Texas |
       </p>
-      <p class="footer-info-two" id="lastmod"></p> </br>
+      <p class="footer-info-two" id="lastmod"></p>
+      <br />
       <a class="openweather" href="https://openweathermap.org/api"
         >Weather provided by OpenWeatherMap</a
       >
-</br>
-      <a class="openweather" href="https://www.churchofjesuschrist.org/temples/list?lang=eng"
-        >Temple information provided by The Church of Jesus Christ of Latterday Saints</a
+      <br />
+      <a
+        class="openweather"
+        href="https://www.churchofjesuschrist.org/temples/list?lang=eng"
+        >Temple information provided by The Church of Jesus Christ of Latterday
+        Saints</a
       >
     </footer>
   </body>
