--- a/temple-inn-and-suite/missionary.html
+++ b/temple-inn-and-suite/missionary.html
@@ -65,12 +65,17 @@
           They may serve in the administrative office, youth center, cafeteria,
           clothing, laundry, custodial, facilities maintenance, grounds, and in
           security.
-        </br>
-      </br>
-          Volunteers serving in temple baptistries and ordinance-support areas (such as the recommend desk and sealing office) will continue to be called by the temple president through the standard recommendation process. All other long-term volunteer positions will become service missionary assignments.
-        </br>
-      </br>
-          If you are interested in learning more please contact the in at: dallastempleinn@lds.org
+          <br />
+          <br />
+          Volunteers serving in temple baptistries and ordinance-support areas
+          (such as the recommend desk and sealing office) will continue to be
+          called by the temple president through the standard recommendation
+          process. All other long-term volunteer positions will become service
+          missionary assignments.
+          <br />
+          <br />
+          If you are interested in learning more please contact the in at:
+          dallastempleinn@lds.org
         </p>
       </article>
     </main>
