--- a/temple-inn-and-suite/reception.html
+++ b/temple-inn-and-suite/reception.html
@@ -62,12 +62,13 @@
 
       <article class="services-article">
         <h2 class="sub-title">Reception Services</h2>
-        <p>The wedding reception accommodations including options for food service and setup.<br/>
-        To contact the reception services please call or email us at: </br>
+        <p>The wedding reception accommodations including options for food service and setup.<br>
+        To contact the reception services please call or email us at: </p>
         <ul class="amenities-list">
           <li>dallastemplereservation@lds.org</li>
           <li>+1 801-240-3801</li>
         </ul>
+        <p>
         We are avalible Tue-Sat 8am-9pm
         </p>
       </article>
