--- a/temple-inn-and-suite/reservation.html
+++ b/temple-inn-and-suite/reservation.html
@@ -87,16 +87,16 @@
 
           <label>Room Type:</label>
           <div class="selection">
-            <input type="radio" name="room" id="room" value="8" checked />
-            <label for="time1">Singe/twin bed</label>
-            <input type="radio" name="room" id="room" value="9" />
-            <label for="time2">Double/2 twin beds</label>
-            <input type="radio" id="room" name="room" value="10" />
-            <label for="time3">Medium/queen bed</label>
-            <input type="radio" id="room" name="room" value="11" />
-            <label for="time4">Family/queen and 2 twin</label>
-            <input type="radio" id="room" name="room" value="12" />
-            <label for="time5">Long term/queen and kitchen</label>
+            <input type="radio" name="room1" id="room1" value="8" checked />
+            <label for="room1">Singe/twin bed</label>
+            <input type="radio" name="room2" id="room2" value="9" />
+            <label for="room2">Double/2 twin beds</label>
+            <input type="radio" id="room3" name="room3" value="10" />
+            <label for="room3">Medium/queen bed</label>
+            <input type="radio" id="room4" name="room4" value="11" />
+            <label for="room4">Family/queen and 2 twin</label>
+            <input type="radio" id="room5" name="room5" value="12" />
+            <label for="room5">Long term/queen and kitchen</label>
           </div>
         </fieldset>
 
@@ -119,9 +119,7 @@
             alt="Temple at sunset"
           />
         </picture>
-        <p>
-        Visit the Dallas Temple!
-        </p>
+        <p>Visit the Dallas Temple!</p>
       </article>
     </main>
 
