--- a/temple-inn-and-suite/temple.html
+++ b/temple-inn-and-suite/temple.html
@@ -18,7 +18,6 @@
     <script src="js/script.js" defer></script>
     <script src="js/dates.js" defer></script>
     <script src="js/temples.js" defer></script>
-    <script src="js/like.js" defer></script>
   </head>
   <body>
     <header>
@@ -99,10 +98,13 @@
         &copy; <span id="year">year</span> | Sara M. Tague | Texas |
       </p>
       <p class="footer-info-two" id="lastmod"></p>
-    </br>
-    <a class="openweather" href="https://www.churchofjesuschrist.org/temples/list?lang=eng"
-      >Temple information provided by The Church of Jesus Christ of Latterday Saints</a
-    >
+      <br />
+      <a
+        class="openweather"
+        href="https://www.churchofjesuschrist.org/temples/list?lang=eng"
+        >Temple information provided by The Church of Jesus Christ of Latterday
+        Saints</a
+      >
     </footer>
   </body>
 </html>
