--- a/temple-inn-and-suite/reservation.html
+++ b/temple-inn-and-suite/reservation.html
@@ -108,7 +108,7 @@
         <label
           ><input type="hidden" id="submitdate" name="submitdate" value=""
         /></label>
-        <input type="submit" class="submit" value="Join the Chamber" />
+        <input type="submit" class="submit" value="Reserve your room!" />
       </form>
 
       <article class="sunset">
